--- a/src/pages/Contact/contactPageStyles.scss
+++ b/src/pages/Contact/contactPageStyles.scss
@@ -1,3 +1,80 @@
+.container.contact-page {
+    h1 {
+      font-size: 53px;
+      font-family: 'Coolvetica';
+      color: #4db5ff;
+      font-weight: 400;
+      margin-top: 0;
+      position: relative;
+      margin-bottom: 40px;
+      left: -10px;
+
+      &:before {
+        content: '<h1>';
+        font-family: 'La Belle Aurore', cursive;
+        color: #4db5ff;
+        font-size: 18px;
+        position: absolute;
+        margin-top: -10px;
+        left: -10px;
+        opacity: 0.6;
+        line-height: 18px;
+      }
+
+      &:after {
+        content: '<h1/>';
+        font-family: 'La Belle Aurore', cursive;
+        color: #4db5ff;
+        font-size: 18px;
+        line-height: 18px;
+        position: absolute;
+        left: -30px;
+        bottom: -3rem;
+        margin-left: 20px;
+        opacity: 0.6;
+      }
+    }
+
+    p {
+      font-size: 13px;
+      color: #fff;
+      font-family: sans-serif;
+      font-weight: 300;
+      max-width: fit-content;
+      animation: pulse 1s;
+      &:nth-of-type(1) {
+        animation-delay: 1.1s;
+      }
+      &:nth-of-type(2) {
+        animation-delay: 1.2s;
+      }
+      &:nth-of-type(3) {
+        animation-delay: 1.3s;
+      }
+    }
+
+  .text-zone {
+    position: absolute;
+    left: 10%;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 35%;
+    vertical-align: middle;
+    display: table-cell;
+    max-height: 90%;
+  }
+
+  .text-animate-hover {
+    &:hover {
+      color: #fff;
+    }
+  }
+}
+
+
+
+
+
 .contact-form {
   width: 100%;
   margin-top: 20px;
@@ -77,8 +154,8 @@
   background: rgba(8, 253, 216, 0.1);
   float: right;
   width: 53%;
-  height: 115%;
-  margin-top: -3%;
+  height: 90vh;
+  margin-top: 0;
 }
 
 .leaflet-container {
@@ -94,7 +171,7 @@
   position: absolute;
   background: #000;
   top: 50px;
-  right: 30%;
+  right: 15rem;
   z-index: 999999;
   width: 267px;
   padding: 20px;
@@ -115,4 +192,65 @@
 }
 
 
+
+@media screen and (max-width: 900px) {
+.container.contact-page{
+ .text-zone{
+    width: 80%;
+   left: 15%;
+   height: 90%;
+  }
+}
+
+ .map-wrap{
+  visibility: collapse;
+ }
+  .info-map{
+    visibility: collapse;
+  }
+}
+
+@media screen and (max-width: 600px) {
+
+  .map-wrap {
+  visibility: collapse;
+}
+
+
+.info-map {
+  visibility: collapse;
+}
+
+.container.contact-page{
+
+    h1 {
+      margin-top: 5rem;
+      margin-bottom: 0;
+
+      &:before {
+        margin-top: 0;
+      }
+
+      &:after {
+        position: initial;
+        left: -30px;
+        bottom: 5rem;
+        margin-left: 10px;
+      }
+    }
+
+
+    p {
+      max-width: fit-content;
+    }
+
+  .text-zone {
+    position: inherit;
+    left: 5%;
+    top: 45%;
+    width: 90%;
+  }
+
+}
+}
 
