--- a/src/pages/Home/homePageStyles.scss
+++ b/src/pages/Home/homePageStyles.scss
@@ -90,6 +90,74 @@
   
   }
 }
-  
 
- 
+@media screen and (max-width: 950px) {
+
+    .home-page {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    flex-direction: column-reverse;
+    margin-left: -5%;
+    height: auto;
+    
+ .text-zone {
+    position: relative;  
+    top: 10%;
+    margin-left: 5%;
+    width: 62%;
+    max-height: 90%;
+    z-index: 5;
+    margin-top: 2rem;
+  }
+
+  h1 {
+   line-height: 5rem;
+  }
+
+
+  .btn-zone{
+   display: flex;
+   flex-direction: column;
+   width: 50%;
+  }
+
+}
+
+}
+
+
+
+@media screen and (max-width: 600px) {
+
+  .home-page {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-direction: column-reverse;
+    margin-left: -5%;
+    overflow: scroll;
+    
+ .text-zone {
+    position: relative;  
+    top: 5%;
+    margin-left: 10%;
+    width: 70%;
+    max-height: 90%;
+    z-index: 5;
+    margin-top: 1rem;
+  }
+
+  h1 {
+   line-height: 5rem;
+  }
+
+  .btn-zone{
+   display: flex; 
+   flex-direction: column;
+   width: 80%;
+   overflow: scroll;
+  }
+
+ }
+}
